# xawareHoloLens

./: CMakeLists.txt  README.md
include/: amqpconnection.h  mainwindow.h  servertcp.h
src/: amqpconnection.cpp  mainwindow.cpp  mainwindow.ui  servertcp.cpp
